历史记录、下载记录支持

--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
             <button class="nav-btn" id="backBtn" disabled><i class="fas fa-arrow-left"></i></button>
             <button class="nav-btn" id="forwardBtn" disabled><i class="fas fa-arrow-right"></i></button>
             <button class="nav-btn" id="reloadBtn"><i class="fas fa-redo"></i></button>
-            <button class="search-btn" id="searchBtn"><i class="fas fa-search"></i></button>
-            <button class="bookmark-btn" id="bookmarkBtn"><i class="far fa-star"></i></button>
+            <button class="nav-btn" id="searchBtn"><i class="fas fa-search"></i></button>
+            <button class="nav-btn" id="historyBtn"><i class="fas fa-history"></i></button>
+            <button class="nav-btn" id="downloadsBtn"><i class="fas fa-download"></i></button>
         </div>
         <div class="tabs" id="tabs">
             <div class="tab add-tab"><i class="fas fa-plus" style="transform: translateX(5px);"></i></div>
